[gd_scene load_steps=8 format=3 uid="uid://diwe8wsg0rb4x"]

[ext_resource type="Texture2D" uid="uid://bx50ylqdtofod" path="res://ui/standard_hud/skoll_hearts.svg" id="1_7hmfr"]
[ext_resource type="Script" path="res://ui/standard_hud/standard_hud.gd" id="1_bf2sa"]
[ext_resource type="PackedScene" uid="uid://df4oq0hq8totx" path="res://ui/standard_hud/health_bar.tscn" id="2_7owf2"]
[ext_resource type="Texture2D" uid="uid://dydgne7juflnq" path="res://ui/standard_hud/lorc_cash.svg" id="3_7ra0r"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qwl57"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_2fwa0"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_w6pvi"]

[node name="StandardHUD" type="CanvasLayer"]
script = ExtResource("1_bf2sa")

[node name="Control" type="Control" parent="."]
custom_minimum_size = Vector2(8, 8)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Rows" type="HBoxContainer" parent="Control"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
mouse_filter = 2
alignment = 1

[node name="WaveLabel" type="Label" parent="Control/Rows"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Wave: ???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NextWave" type="PanelContainer" parent="Control/Rows"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
mouse_filter = 2

[node name="Columns" type="HBoxContainer" parent="Control/Rows/NextWave"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Title" type="Label" parent="Control/Rows/NextWave/Columns"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 0
theme_override_styles/normal = SubResource("StyleBoxEmpty_qwl57")
text = "Next Wave In: "
horizontal_alignment = 1

[node name="Countdown" type="Label" parent="Control/Rows/NextWave/Columns"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_2fwa0")
text = "???"
horizontal_alignment = 1
vertical_alignment = 1

[node name="WaveTimer" type="Timer" parent="Control/Rows/NextWave"]
unique_name_in_owner = true
one_shot = true

[node name="HealthAndMonet" type="PanelContainer" parent="Control/Rows"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 10
mouse_filter = 2

[node name="Rows" type="VBoxContainer" parent="Control/Rows/HealthAndMonet"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="Health" type="HBoxContainer" parent="Control/Rows/HealthAndMonet/Rows"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Control/Rows/HealthAndMonet/Rows/Health"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("1_7hmfr")
expand_mode = 1
stretch_mode = 5

[node name="HealthBar" parent="Control/Rows/HealthAndMonet/Rows/Health" instance=ExtResource("2_7owf2")]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 3

[node name="Monet" type="HBoxContainer" parent="Control/Rows/HealthAndMonet/Rows"]
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
mouse_filter = 2

[node name="Icon" type="TextureRect" parent="Control/Rows/HealthAndMonet/Rows/Monet"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_7ra0r")
expand_mode = 1
stretch_mode = 5

[node name="Amount" type="Label" parent="Control/Rows/HealthAndMonet/Rows/Monet"]
unique_name_in_owner = true
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_w6pvi")
text = "Monet: Bruh"
horizontal_alignment = 1
vertical_alignment = 1
